added deposit and withdrawal functions
Co-authored-by: Isaac Overstreet <isaacoverstreet3@gmail.com>

--- a/index.html
+++ b/index.html
@@ -55,17 +55,14 @@
         <div class="card">
           <div class="card-body">
             <h2 class="card-title">Current Balance:</h2>
+            <img src="img/money.jpg" width=50%;>
             <ul class="card-text">
-              
+              <display class="balance"> </display>
             </ul>
           </div>
         </div>
       </div> 
     </form>
   </div>
-  <div id="results">
-
-  </div>
-  
 </body>
 </html>
